align issue fixed

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -13,12 +13,12 @@
 			font-family: "Roboto", sans-serif;
 		}
 		
-		.wrapper {
+		/* .wrapper {
 			width: 998px;
 			margin: 0 auto;
 			padding: 0 24px;
 			padding-top: 34px;
-		}
+		} */
 		p{
 			font-weight:300;
 			color:black;
